# Simple_Obj_Renderer

./: CMakeLists.txt  README.md
shader/: basic.shader
src/: Camera.cpp  Camera.h  ErrorCheck.cpp  ErrorCheck.h  ObjLoader.cpp  ObjLoader.h  Renderer.cpp  Renderer.h  window.cpp
